--- a/index.html
+++ b/index.html
@@ -19,8 +19,25 @@ html,body{
   font-family:sans-serif;
 }
 
+/* ===== 容器（見た目） ===== */
+#containerVisual{
+  position:absolute;
+  left:50%;
+  transform:translateX(-50%);
+  border-left:6px solid #8b5e3c;
+  border-right:6px solid #8b5e3c;
+  border-bottom:6px solid #8b5e3c;
+  border-bottom-left-radius:40px;
+  border-bottom-right-radius:40px;
+  pointer-events:none;
+  z-index:1;
+}
+
 canvas{
-  display:block;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:0;
   touch-action:none;
 }
 
@@ -31,60 +48,18 @@ canvas{
   font-size:14px;
   z-index:10;
 }
-
-#rankingBox{
-  position:absolute;
-  bottom:10px;
-  left:10px;
-  width:200px;
-  font-size:12px;
-  background:rgba(255,255,255,0.9);
-  padding:8px;
-  border-radius:8px;
-  z-index:10;
-}
-
-#gameOver{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  background:white;
-  padding:20px;
-  border-radius:10px;
-  text-align:center;
-  display:none;
-  z-index:20;
-}
-
-button{
-  padding:8px 14px;
-  border:none;
-  border-radius:6px;
-  background:#ff595e;
-  color:white;
-}
 </style>
 </head>
 <body>
 
+<div id="containerVisual"></div>
+
 <div id="scoreBox">
-Score: <span id="score">0</span><br>
-High: <span id="highScore">0</span>
-</div>
-
-<div id="rankingBox">
-<b>🌍 TOP5</b>
-<div id="ranking"></div>
-</div>
-
-<div id="gameOver">
-<h2>GAME OVER</h2>
-<button onclick="location.reload()">Retry</button>
+Score: <span id="score">0</span>
 </div>
 
 <script>
-const {Engine,Render,Runner,World,Bodies,Body,Events} = Matter;
+const {Engine,Render,Runner,World,Bodies,Body} = Matter;
 
 const width = window.innerWidth;
 const height = document.documentElement.clientHeight;
@@ -120,10 +95,15 @@ const centerX = width/2;
 const topY = height*0.15;
 const bottomY = topY + containerHeight;
 
-const wallThickness = 40;
-const cornerRadius = 40;
+/* ===== CSS容器のサイズ反映 ===== */
+const visual = document.getElementById("containerVisual");
+visual.style.width = containerWidth + "px";
+visual.style.height = containerHeight + "px";
+visual.style.top = topY + "px";
 
-/* ===== 物理用の見えない壁 ===== */
+/* ===== 物理の見えない壁 ===== */
+
+const wallThickness = 40;
 
 const leftWall = Bodies.rectangle(
   centerX-containerWidth/2,
@@ -151,50 +131,12 @@ const bottomWall = Bodies.rectangle(
 
 World.add(world,[leftWall,rightWall,bottomWall]);
 
-/* ===== 見た目用U字を描画 ===== */
-
-Events.on(render, "afterRender", function() {
-  const ctx = render.context;
-
-  ctx.beginPath();
-  ctx.lineWidth = 6;
-  ctx.strokeStyle = "#8b5e3c";
-
-  ctx.moveTo(centerX-containerWidth/2, topY);
-  ctx.lineTo(centerX-containerWidth/2, bottomY-cornerRadius);
-
-  ctx.arc(
-    centerX-containerWidth/2+cornerRadius,
-    bottomY-cornerRadius,
-    cornerRadius,
-    Math.PI,
-    Math.PI/2,
-    true
-  );
-
-  ctx.lineTo(centerX+containerWidth/2-cornerRadius, bottomY);
-
-  ctx.arc(
-    centerX+containerWidth/2-cornerRadius,
-    bottomY-cornerRadius,
-    cornerRadius,
-    Math.PI/2,
-    0,
-    true
-  );
-
-  ctx.lineTo(centerX+containerWidth/2, topY);
-
-  ctx.stroke();
-});
-
 /* ===== ボール ===== */
 
-const sizes=[20,28,40,55,75,100,130];
 let currentBall=null;
 
 function spawn(){
-  const ball=Bodies.circle(centerX,topY-40,sizes[0],{
+  const ball=Bodies.circle(centerX,topY-40,20,{
     restitution:0.1,
     friction:0.3,
     frictionAir:0.02
@@ -223,7 +165,6 @@ window.addEventListener("touchstart",e=>{
   e.preventDefault();
   currentBall=null;
 },{passive:false});
-
 </script>
 
 </body>
