--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <meta name="viewport"
 content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+<!-- ローカル読み込み用 -->
+<script src="./matter.min.js"></script>
+<script src="./poly-decomp.min.js"></script>
+<script>
+  // 凹形ポリゴン用設定（今はcircleだけですが警告回避）
+  Matter.Common.setDecomp(window.decomp);
+</script>
 
 <style>
 html,body{
