--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <title>犬スイカゲーム 🐶</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="viewport"
-content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-<!-- ローカル読み込み用 -->
-<script src="./matter.min.js"></script>
-<script src="./poly-decomp.min.js"></script>
+<!-- Matter.js と poly-decomp 警告回避 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/poly-decomp/0.3.0/poly-decomp.min.js"></script>
 <script>
-  // 凹形ポリゴン用設定（今はcircleだけですが警告回避）
   Matter.Common.setDecomp(window.decomp);
 </script>
 
 <style>
-html,body{
+body, html {
   margin:0;
-  padding:0;
   overflow:hidden;
-  height:100vh;
+  width:100%;
+  height:100%;
   background:linear-gradient(#ffe8c7,#ffd6a5);
   font-family:sans-serif;
 }
 
-/* ===== 容器（見た目） ===== */
+/* 容器 */
 #containerVisual{
   position:absolute;
   left:50%;
@@ -39,138 +36,294 @@ html,body{
   z-index:1;
 }
 
+/* スコア */
+#scoreBox{
+  position:absolute;
+  top:20px;
+  right:20px;
+  font-size:18px;
+  z-index:10;
+}
+
+/* ランキング */
+#rankingBox{
+  position:absolute;
+  top:20px;
+  left:20px;
+  width:230px;
+  font-size:14px;
+  line-height:1.6em;
+  z-index:10;
+  background:rgba(255,255,255,0.7);
+  padding:10px;
+  border-radius:10px;
+}
+
+/* ゲームオーバー */
+#gameOver{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  text-align:center;
+  display:none;
+  z-index:20;
+  background:white;
+  padding:20px;
+  border-radius:10px;
+}
+
+#gameOver h1{
+  color:red;
+  font-size:40px;
+}
+
+button{
+  padding:8px 18px;
+  font-size:16px;
+  border:none;
+  border-radius:6px;
+  cursor:pointer;
+  background:#ff595e;
+  color:white;
+}
+
 canvas{
   position:absolute;
   top:0;
   left:0;
   z-index:0;
-  touch-action:none;
-}
-
-#scoreBox{
-  position:absolute;
-  top:10px;
-  right:15px;
-  font-size:14px;
-  z-index:10;
 }
 </style>
 </head>
 <body>
 
+<!-- 容器表示 -->
 <div id="containerVisual"></div>
 
 <div id="scoreBox">
-Score: <span id="score">0</span>
+  Score : <span id="score">0</span><br>
+  High : <span id="highScore">0</span>
+</div>
+
+<div id="rankingBox">
+  <b>🌍 世界ランキング TOP10</b>
+  <div id="ranking"></div>
+</div>
+
+<div id="gameOver">
+  <h1>GAME OVER</h1>
+  <input id="playerName" placeholder="名前を入力">
+  <br><br>
+  <button onclick="submitScore()">スコア送信</button>
+  <br><br>
+  <button onclick="location.reload()">Retry</button>
 </div>
 
 <script>
-const {Engine,Render,Runner,World,Bodies,Body} = Matter;
+const {Engine, Render, Runner, World, Bodies, Body, Events, Common} = Matter;
 
 const width = window.innerWidth;
-const height = document.documentElement.clientHeight;
+const height = window.innerHeight;
 const isMobile = width < 768;
 
+// エンジン
 const engine = Engine.create();
-engine.world.gravity.y = 1.05;
-engine.positionIterations = 15;
-engine.velocityIterations = 15;
-
+engine.world.gravity.y = 1;
 const world = engine.world;
 
+// レンダラー
 const render = Render.create({
   element: document.body,
   engine: engine,
   options:{
-    width:width,
-    height:height,
+    width: width,
+    height: height,
     wireframes:false,
     background:"transparent"
   }
 });
-
 Render.run(render);
 Runner.run(Runner.create(), engine);
 
-/* ===== 容器サイズ ===== */
-
+// 容器サイズ
 const containerWidth = isMobile ? width*0.9 : 420;
 const containerHeight = isMobile ? height*0.6 : 520;
-
 const centerX = width/2;
 const topY = height*0.15;
 const bottomY = topY + containerHeight;
 
-/* ===== CSS容器のサイズ反映 ===== */
-const visual = document.getElementById("containerVisual");
-visual.style.width = containerWidth + "px";
-visual.style.height = containerHeight + "px";
-visual.style.top = topY + "px";
+// CSS 容器反映
+const visual=document.getElementById("containerVisual");
+visual.style.width = containerWidth+"px";
+visual.style.height = containerHeight+"px";
+visual.style.top = topY+"px";
 
-/* ===== 物理の見えない壁 ===== */
-
+// 壁
 const wallThickness = 40;
+const leftWall = Bodies.rectangle(centerX-containerWidth/2, bottomY-containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{visible:false}});
+const rightWall = Bodies.rectangle(centerX+containerWidth/2, bottomY-containerHeight/2, wallThickness, containerHeight, {isStatic:true, render:{visible:false}});
+const floor = Bodies.rectangle(centerX, bottomY+20, containerWidth, 60, {isStatic:true, render:{visible:false}});
+World.add(world,[leftWall,rightWall,floor]);
 
-const leftWall = Bodies.rectangle(
-  centerX-containerWidth/2,
-  bottomY-containerHeight/2,
-  wallThickness,
-  containerHeight,
-  {isStatic:true, render:{visible:false}}
-);
+// ボールサイズ
+const baseSizes=[18,26,36,48,62,78,100,125,160];
+const sizeMultiplier = isMobile ? 0.75 : 0.6;
+const sizes = baseSizes.map(s=>Math.round(s*sizeMultiplier));
 
-const rightWall = Bodies.rectangle(
-  centerX+containerWidth/2,
-  bottomY-containerHeight/2,
-  wallThickness,
-  containerHeight,
-  {isStatic:true, render:{visible:false}}
-);
-
-const bottomWall = Bodies.rectangle(
-  centerX,
-  bottomY+20,
-  containerWidth,
-  60,
-  {isStatic:true, render:{visible:false}}
-);
-
-World.add(world,[leftWall,rightWall,bottomWall]);
-
-/* ===== ボール ===== */
+// ボール画像
+const dogImages=[
+"images/inugame_size1.png",
+"images/inugame_size2.png",
+"images/inugame_size3.png",
+"images/inugame_size4.png",
+"images/inugame_size5.png",
+"images/inugame_size6.png",
+"images/inugame_size7.png",
+"images/inugame_size8.png",
+"images/inugame_size9.png"
+];
 
 let currentBall=null;
+let score=0;
+let highScore=localStorage.getItem("highScore")||0;
+let isGameOver=false;
+document.getElementById("highScore").innerText=highScore;
 
-function spawn(){
-  const ball=Bodies.circle(centerX,topY-40,20,{
-    restitution:0.1,
-    friction:0.3,
-    frictionAir:0.02
+// ボール作成
+function createBall(sizeIndex,x,y,isStatic=false){
+  const radius=sizes[sizeIndex];
+  const texturePath=dogImages[sizeIndex];
+
+  const ball=Bodies.circle(x,y,radius,{
+    restitution:0.15,
+    friction:0.2,
+    isStatic:isStatic,
+    render:{sprite:{texture:texturePath,xScale:1,yScale:1}}
   });
-  currentBall=ball;
-  World.add(world,ball);
+
+  const img=new Image();
+  img.src=texturePath;
+  img.onload=function(){
+    const scale=(radius*2)/Math.max(img.width,img.height);
+    ball.render.sprite.xScale=scale;
+    ball.render.sprite.yScale=scale;
+  };
+
+  ball.sizeIndex=sizeIndex;
+  return ball;
 }
-spawn();
 
-function move(x){
-  if(!currentBall)return;
-  const min=centerX-containerWidth/2+30;
-  const max=centerX+containerWidth/2-30;
-  const fixed=Math.max(min,Math.min(max,x));
-  Body.setPosition(currentBall,{x:fixed,y:topY-40});
+// ボール生成
+function spawnBall(){
+  if(isGameOver) return;
+  const sizeIndex=Math.floor(Math.random()*3);
+  currentBall=createBall(sizeIndex,centerX,topY,true);
+  World.add(world,currentBall);
+}
+spawnBall();
+
+// マウス・タッチ操作
+function moveBall(x){
+  if(currentBall && !isGameOver){
+    const min=centerX-containerWidth/2+30;
+    const max=centerX+containerWidth/2-30;
+    const fixed=Math.max(min,Math.min(max,x));
+    Body.setPosition(currentBall,{x:fixed,y:topY});
+  }
 }
 
-window.addEventListener("mousemove",e=>move(e.clientX));
-window.addEventListener("click",()=>currentBall=null);
+window.addEventListener("mousemove",e=>moveBall(e.clientX));
+window.addEventListener("touchmove",e=>moveBall(e.touches[0].clientX));
+window.addEventListener("click",()=>{
+  if(currentBall && !isGameOver){
+    Body.setStatic(currentBall,false);
+    currentBall=null;
+    setTimeout(spawnBall,400);
+  }
+});
+window.addEventListener("touchstart",e=>{
+  if(currentBall && !isGameOver){
+    Body.setStatic(currentBall,false);
+    currentBall=null;
+    setTimeout(spawnBall,400);
+  }
+},{passive:false});
 
-window.addEventListener("touchmove",e=>{
-  move(e.touches[0].clientX);
+// 合体処理
+Events.on(engine,"collisionStart",event=>{
+  event.pairs.forEach(pair=>{
+    const a=pair.bodyA;
+    const b=pair.bodyB;
+    if(a.sizeIndex!==undefined && b.sizeIndex!==undefined && a.sizeIndex===b.sizeIndex){
+      const newSize=a.sizeIndex+1;
+      if(newSize<sizes.length){
+        const newBall=createBall(newSize,(a.position.x+b.position.x)/2,(a.position.y+b.position.y)/2);
+        World.remove(world,a);
+        World.remove(world,b);
+        World.add(world,newBall);
+        score+=(newSize+1)*5;
+        document.getElementById("score").innerText=score;
+        if(score>highScore){
+          highScore=score;
+          localStorage.setItem("highScore",highScore);
+          document.getElementById("highScore").innerText=highScore;
+        }
+      }
+    }
+  });
 });
 
-window.addEventListener("touchstart",e=>{
-  e.preventDefault();
-  currentBall=null;
-},{passive:false});
+// ゲームオーバー判定
+Events.on(engine,"afterUpdate",()=>{
+  if(isGameOver) return;
+  world.bodies.forEach(body=>{
+    if(body.sizeIndex!==undefined && body.position.y>height+200){
+      isGameOver=true;
+      document.getElementById("gameOver").style.display="block";
+    }
+  });
+});
+</script>
+
+<!-- 🔥 世界ランキング -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+import { getDatabase, ref, push, onValue, query, orderByChild, limitToLast } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js";
+
+const firebaseConfig={
+  apiKey:"AIzaSyDzxYXP5Lyz1Ky-q1S1hJO746gIU6VaAy8",
+  authDomain:"shibainugame-1865a.firebaseapp.com",
+  databaseURL:"https://shibainugame-1865a-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId:"shibainugame-1865a",
+  storageBucket:"shibainugame-1865a.appspot.com",
+  messagingSenderId:"278247707611",
+  appId:"1:278247707611:web:9a04085c0493fd2ee64dfe"
+};
+
+const app=initializeApp(firebaseConfig);
+const db=getDatabase(app);
+
+window.submitScore=function(){
+  const name=document.getElementById("playerName").value||"名無し";
+  push(ref(db,"ranking"),{name:name,score:score,time:Date.now()});
+};
+
+const rankingRef=query(ref(db,"ranking"),orderByChild("score"),limitToLast(10));
+onValue(rankingRef,(snapshot)=>{
+  const box=document.getElementById("ranking");
+  box.innerHTML="";
+  const data=[];
+  snapshot.forEach(child=>data.push(child.val()));
+  data.reverse();
+  data.forEach((item,i)=>{
+    if(i===0){
+      box.innerHTML+="🏆 <span style='color:gold'>"+item.name+" - "+item.score+"</span><br>";
+    }else{
+      box.innerHTML+=(i+1)+"位 "+item.name+" - "+item.score+"<br>";
+    }
+  });
+});
 </script>
 
 </body>
