--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
 <title>犬スイカゲーム 🐶</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Matter.js と poly-decomp 警告回避 -->
+<!-- 元々の方式で読み込む CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/poly-decomp/0.3.0/poly-decomp.min.js"></script>
-<script>
-  Matter.Common.setDecomp(window.decomp);
-</script>
 
 <style>
 body, html {
@@ -22,21 +18,6 @@ body, html {
   font-family:sans-serif;
 }
 
-/* 容器 */
-#containerVisual{
-  position:absolute;
-  left:50%;
-  transform:translateX(-50%);
-  border-left:6px solid #8b5e3c;
-  border-right:6px solid #8b5e3c;
-  border-bottom:6px solid #8b5e3c;
-  border-bottom-left-radius:40px;
-  border-bottom-right-radius:40px;
-  pointer-events:none;
-  z-index:1;
-}
-
-/* スコア */
 #scoreBox{
   position:absolute;
   top:20px;
@@ -45,7 +26,6 @@ body, html {
   z-index:10;
 }
 
-/* ランキング */
 #rankingBox{
   position:absolute;
   top:20px;
@@ -59,7 +39,6 @@ body, html {
   border-radius:10px;
 }
 
-/* ゲームオーバー */
 #gameOver{
   position:absolute;
   top:50%;
@@ -98,7 +77,7 @@ canvas{
 </head>
 <body>
 
-<!-- 容器表示 -->
+<!-- 容器 -->
 <div id="containerVisual"></div>
 
 <div id="scoreBox">
@@ -121,13 +100,13 @@ canvas{
 </div>
 
 <script>
-const {Engine, Render, Runner, World, Bodies, Body, Events, Common} = Matter;
+const {Engine, Render, Runner, World, Bodies, Body, Events} = Matter;
 
 const width = window.innerWidth;
 const height = window.innerHeight;
 const isMobile = width < 768;
 
-// エンジン
+// エンジンと世界
 const engine = Engine.create();
 engine.world.gravity.y = 1;
 const world = engine.world;
@@ -286,7 +265,7 @@ Events.on(engine,"afterUpdate",()=>{
 });
 </script>
 
-<!-- 🔥 世界ランキング -->
+<!-- 世界ランキング（Firebase） -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
 import { getDatabase, ref, push, onValue, query, orderByChild, limitToLast } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-database.js";
